<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.prebid.mobile.prebidkotlindemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adTypeText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/adTypeText"/>

        <Spinner
            android:id="@+id/adTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minHeight="48dp"
            android:minWidth="128dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adServerText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/adServerText"/>

        <Spinner
            android:id="@+id/adServerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minHeight="48dp"
            android:minWidth="128dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        android:id="@+id/adSizeRow">

        <TextView
            android:id="@+id/adSizeText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/adSizeText"/>

        <Spinner
            android:id="@+id/adSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minHeight="48dp"
            android:minWidth="128dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        android:id="@+id/autoRefreshRow">

        <TextView
            android:id="@+id/autoRefreshText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/autoRefreshText"/>

        <EditText
            android:id="@+id/autoRefreshInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minHeight="48dp"
            android:minWidth="128dp"
            android:inputType="phone"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonText"
        android:id="@+id/showAd"
        android:onClick="showAd"/>

</LinearLayout>
